# py-kitab-diff

./: .gitignore  README.md  py-kitab-diff.py  pyproject.toml  test_python_WikEdDiff.py
src/py_kitab_diff/: __init__.py  main.py
